k8s/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: dermasense
  labels:
    pp.kubernetes.io/name: dermasense-ai
    environment: production
