k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: dermasense-backend-svc
  namespace: dermasense
  labels:
    app: dermasense-backend
spec:
  type: ClusterIP
  ports:
    - port: 5000
      targetPort: 5000
      protocol: TCP
      name: http
  selector:
    app: dermasense-backend
