k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dermasense-ingress
  namespace: dermasense
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "16m"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "120"
spec:
  ingressClassName: nginx
  rules:
    - host: dermasense.hanzladevops.engineer
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: dermasense-backend-svc
                port:
                  number: 5000
          - path: /
            pathType: Prefix
            backend:
              service:
                name: dermasense-frontend-svc
                port:
                  number: 80
